resources/network/cjoc-controller-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cjoc-controller-ingress
  namespace: cbci
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tenant: operations-ops
    - podSelector:
        matchLabels:
          tenant: operations-ops
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: controllers
      podSelector:
        matchLabels:
          com.cloudbees.cje.type: master
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: controllers
      podSelector:
        matchLabels:
          app: "managed-master-hibernation-monitor"
  podSelector:
    matchLabels:
      app.kubernetes.io/component: cjoc
