resources/network/hibernation-allow-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hibernation-allow-ingress-nginx
spec:
  podSelector:
    matchLabels:
      app: "managed-master-hibernation-monitor"
  policyTypes:
   - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cbci
      podSelector:
        matchLabels:
          app.kubernetes.io/component: cjoc
    - podSelector:
        matchLabels:
          type: master
    ports:
    - port: http
      protocol: TCP
