resources/network/ops-controllers-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ops-controllers-ingress
  namespace: cbci
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: controllers
      podSelector:
        matchLabels:
          type: master
  podSelector:
    matchLabels:
      tenant: operations-ops
